minor styling tweaks

--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -43,80 +43,75 @@
     </nav>
 
     <div class="container ">
-        <h1>Let's determine your current workout environment</h1>
+        <h1 class="header">Your Home Gym</h1>
 
         <div class="card card col-sm-12">
-            <h5 class="card-header">Which of the following do you have available to workout?</h5>
             <div class="card-body">
+                <h5 class="card-header">What do you have around the house?</h5>
 
                 <!-- <strong>Which of the following do you have available to workout?</strong> -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="barbell" id="barbell" value="1">
-                    <label class="form-check-label" for="barbell">
-           Barbell 
-           </label>
+                <div class="row">
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="barbell" id="barbell" value="1">
+                        <label class="form-check-label" for="barbell">Barbell</label>
+                    </div>
+
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="bench" id="bench" value="8">
+                        <label class="form-check-label" for="bench">Bench</label>
+                    </div>
                 </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="bench" id="bench" value="8">
-                    <label class="form-check-label" for="bench">
-           Bench
-           </label>
+                <div class="row">
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="dumbbell" id="dumbbell" value="3">
+                        <label class="form-check-label" for="dumbbell">Dumbbells</label>
+                    </div>
+
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="gym-mat" id="gym-mat" value="4">
+                        <label class="form-check-label" for="gym-mat">Gym Mat</label>
+                    </div>
                 </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="dumbbell" id="dumbbell" value="3">
-                    <label class="form-check-label" for="dumbbell">
-           Dumbbell
-           </label>
+                <div class="row">
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="incline-bench" id="incline-bench" value="9">
+                        <label class="form-check-label" for="incline-bench">Incline Bench</label>
+                    </div>
+
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="Kettlebell" id="kettlebell" value="10">
+                        <label class="form-check-label" for="kettlebell">Kettlebells</label>
+                    </div>
                 </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="gym-mat" id="gym-mat" value="4">
-                    <label class="form-check-label" for="gym-mat">
-           Gym mat
-           </label>
+                <div class="row">
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="pull-up-bar" id="pull-up-bar" value="6">
+                        <label class="form-check-label" for="pull-up-bar">Pull-up Bar</label>
+                    </div>
+
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="swiss-ball" id="swiss-ball" value="5">
+                        <label class="form-check-label" for="swiss-ball">Medicine Ball</label>
+                    </div>
                 </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="incline-bench" id="incline-bench" value="9">
-                    <label class="form-check-label" for="incline-bench">
-            Incline bench
-            </label>
+                <div class="row">
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="sz-bar" id="ez-bar" value="2">
+                        <label class="form-check-label" for="ez-bar">EZ-Bar</label>
+                    </div>
+
+                    <div class="form-check col-md-6">
+                        <input class="form-check-input" type="checkbox" name="default" id="default" value="">
+                        <label class="form-check-label" for="default">None</label>
+                    </div>
                 </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="Kettlebell" id="kettlebell" value="10">
-                    <label class="form-check-label" for="kettlebell">
-            Kettlebell
-            </label>
-                </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="pull-up-bar" id="pull-up-bar" value="6">
-                    <label class="form-check-label" for="pull-up-bar">
-            Pull-up bar
-            </label>
-                </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="swiss-ball" id="swiss-ball" value="5">
-                    <label class="form-check-label" for="swiss-ball">
-            Medicine/weight ball
-                </label>
-                </div>
-
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="sz-bar" id="ez-bar" value="2">
-                    <label class="form-check-label" for="ez-bar">
-            EZ-bar 
-                </label>
-                </div>
-
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="default" id="default" value="">
-                    <label class="form-check-label" for="default">None of the above</label>
-                </div>
 
                 <!--Button -->
                 <br>
