--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -49,7 +49,7 @@
                         <label class=pwEm for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
-                    <button type="submit" href="#" class="btn btn-info btn-lg">Log in</button>
+                    <button type="submit" href="#" class="btn btn-info btn-lg" id="submit">Log in</button>
                 </form>
                 <br />
                 <h3>Or sign up <a href="/signup">here</a></h3>
