--- a/public/assets/signup.html
+++ b/public/assets/signup.html
@@ -51,7 +51,7 @@
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                         <span class="sr-only">Error:</span> <span class="msg"></span>
                     </div>
-                    <button type="submit" href="#" class="btn btn-info btn-lg">Sign up</button>
+                    <button type="submit" id="submit" href="#" class="btn btn-info btn-lg">Sign up</button>
                 </form>
                 <br />
                 <h3>Or log in <a href="/login">here</a></h3>
