--- a/public/assets/virtualgym.html
+++ b/public/assets/virtualgym.html
@@ -45,8 +45,16 @@
 
 
     <div class="pageText">
-        <div id="virtualgym"></div>
         <div id="timerSent"></div>
+        <div id="vgName"></div>
+        <div class="row">
+            <div class="col-md-4 descDiv">
+                <div id="vgDesc"></div>
+            </div>
+            <div class="col-md-8">
+                <div id="vgPicture"></div>
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
