Added more navbar style and minor style changes

--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -35,7 +35,6 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
                     <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
-                    <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
                     <li class="nav-item"><a href="/aboutus" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                 </ul>
@@ -43,18 +42,20 @@
         </div>
     </nav>
 
-    <div class="container ">
-        <h1 class="header">Your Home Gym</h1>
+    <h1 class="card-header header">Your Home Gym</h1>
 
+    <div class="container ">
         <div class="card card col-sm-12">
-            <div class="card-body">
-                <h5 class="card-header">What do you have around the house?</h5>
+            <div class="card-body survey">
+                <h5 class="card-header intro">What do you have around the house?</h5>
 
                 <!-- <strong>Which of the following do you have available to workout?</strong> -->
                 <div class="row">
                     <div class="form-check col-md-6">
                         <input class="form-check-input" type="checkbox" name="barbell" id="barbell" value="1">
                         <label class="form-check-label" for="barbell">Barbell</label>
+                        <!-- <input class="form-check-input" type="checkbox" name="barbell" id="barbell" value="1">
+                        <label class="form-check-label" for="barbell">Barbell</label> -->
                     </div>
 
                     <div class="form-check col-md-6">
