--- a/public/assets/home.html
+++ b/public/assets/home.html
@@ -23,7 +23,7 @@
         <div class="container" id="navbar">
             <a href="/index" class="navbar-brand">
                 <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
-                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2" <!-- Logo Text -->
+                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2" >
                 <span class="font-weight-bold">NoGym</span>
             </a>
 
@@ -41,15 +41,15 @@
         </div>
     </nav>
 
+    <h5 class="card-header">Welcome To Your Personalized Home Workout!</h5>
 
     <div class="container">
         <!-- Top of the page - header  -->
         <div class="row">
-            <h5 class="card-header">Welcome To Your Personalized Home Workout!</h5>
 
-            <div class="bmi col-md-2">
+            <div class="bmi col-md-3">
                 <!-- CDC calculator -->
-                <iframe src="https://www.cdc.gov/healthyweight/assessing/adult-widget/iframe.html" frameborder="0" style="border: none;" width="170" height="395">Please upgrade to web browser that supports iframes to see this CDC widget.</iframe>
+                <iframe src="https://www.cdc.gov/healthyweight/assessing/adult-widget/iframe.html" class="borderline" frameborder="0" style="border: none;" width="170" height="395">Please upgrade to web browser that supports iframes to see this CDC widget.</iframe>
             </div>
 
             <div class="specialCard col-md-6">
@@ -68,7 +68,7 @@
                     </p>
                 </div>
             </div>
-            <div class="bmi col-md-4">
+            <div class="bmi col-md-3 cdc">
                 <iframe scrolling="yes" frameborder="0" width="100%" height="460" src="https://www.mealpro.net/dietanalysis" title="My Diet Analysis Calculator" class="borderline" style="overflow:hidden; display:inline-block; float:middle"></iframe>
             </div>
         </div>
