--- a/public/assets/home.html
+++ b/public/assets/home.html
@@ -23,7 +23,7 @@
         <div class="container" id="navbar">
             <a href="/index" class="navbar-brand">
                 <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
-                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2" >
+                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2">
                 <span class="font-weight-bold">NoGym</span>
             </a>
 
@@ -32,7 +32,7 @@
                 <ul class="navbar-nav ml-auto">
                     <!--Navbar Buttons-->
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
-                    <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
+                    <li class="nav-item"><a href="/virtualgym" class="nav-link">Virtual Gym</a></li>
                     <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
                     <li class="nav-item"><a href="/aboutus" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="specialCard col-md-6">
-                <div class="card-body">
+                <div class="card-body mt-4">
                     <p>
                         <B>We are here to provide you with a virtual gym that is tailored to you and your current workout environment!</B>
                     </p>
