--- a/public/assets/routine.html
+++ b/public/assets/routine.html
@@ -32,7 +32,7 @@
             <!-- Navbar buttons -->
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
+                    <li class="nav-item"><a href="/virtualgym" class="nav-link">Virtual Gym</a></li>
                     <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
                     <li class="nav-item"><a href="/aboutus" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
