--- a/public/assets/aboutus.html
+++ b/public/assets/aboutus.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=McLaren&family=Padauk:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -31,7 +35,7 @@
                 <ul class="navbar-nav ml-auto">
                     <!--Navbar Buttons-->
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
-                    <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
+                    <li class="nav-item"><a href="/virtualgym" class="nav-link">Virtual Gym</a></li>
                     <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                 </ul>
@@ -47,139 +51,92 @@
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
 
-                <!-- card for Terrapin (photo, brief description and email info -->
-                <div class="card us">
-                    <img src="./images/terrapin.jpg" class="card-img-top" alt="tarrapin" style=>
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- card for Terrapin (photo, brief description and email info -->
+                        <div class="card us">
+                            <img src="https://ca.slack-edge.com/T01C8L6GK9Q-U01CWJ19YBT-f614b873e04d-512" class="card-img-top" alt="tarrapin" style=>
 
-                    <div class="card-body">
-                        <h3 class="card-title dev-title">Terrapin Christensen</h3>
-                        <p class="card-text">
-                            Brief Description
-                        </p>
-                    </div>
-                    <!-- Three favorite things Terrapin likes to do -->
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            Fav thing 1
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 2
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 3
-                        </li>
-                    </ul>
-                    <!-- Tarrapin's email info -->
-                    <div class="card-body">
-                        <a href="mailto:-----"> Email </a>
-                        <br>
-                        <a href="https://github.com/TChristensenDrumz/" class="card-link"> Github </a>
+                            <div class="card-body">
+                                <h3 class="card-title dev-title">Terrapin Christensen</h3>
+                                <p class="card-text">
+                                    Terrapin Christensen, born in Dubuque, Iowa, is a professional drummer currently based in Glendale, California. Terrapin has preformed with groups including the Colburn Adult Jazz Combo. Terrapin is trained in a wide range of musical genres including
+                                    jazz, rock, funk, latin, hip-hop, reggae, metal, and pop. Terrapin also has a year of experience in JavaScript and is currently enrolled in the UCLA Extension Coding Bootcamp.
+                                </p>
+                                <a href="mailto:tchristensendrumz@gmail.com"> Email </a>
+                                <br>
+                                <a href="https://github.com/TChristensenDrumz/" class="card-link"> Github </a>
+                            </div>
+
+                        </div>
+                        <!--end card-->
+
                     </div>
                 </div>
-                <!--end card-->
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- card for Candy (photo, brief description and email info -->
+                        <div class="card us">
+                            <img src="https://ca.slack-edge.com/T01C8L6GK9Q-U01CWHXJAHF-a4bfa2eae50d-512" class="card-img-top" alt="candy">
 
-
-
-                <!-- card for Candy (photo, brief description and email info -->
-                <div class="card us">
-                    <img src="./images/candy.jpg" class="card-img-top" alt="candy">
-
-                    <div class="card-body">
-                        <h3 class="card-title dev-title">Candy Garcia</h3>
-                        <p class="card-text">
-                            <!-- Brief info re Candy goes here -->
-                            Brief Description
-                        </p>
-                    </div>
-                    <!-- Three favorite things Candy likes to do -->
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            Fav thing 1
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 2
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 3
-                        </li>
-                    </ul>
-                    <!-- Candy's email info -->
-                    <div class="card-body">
-                        <a href="mailto:-----"> Email </a>
-                        <br>
-                        <a href="https://github.com/candygarcia014" class="card-link"> Github </a>
+                            <div class="card-body">
+                                <h3 class="card-title dev-title">Candy Garcia</h3>
+                                <p class="card-text">
+                                    <!-- Brief info re Candy goes here -->
+                                    My name is Candy Garcia, I am new to programming and web development. My experience is in business management, finance, and investments. I am interested in perusing a career in web development because I am a logical and highly creative person that would
+                                    like to follow her dreams.
+                                </p>
+                                <a href="mailto:candygarcia014@gmail.com"> Email </a>
+                                <br>
+                                <a href="https://github.com/candygarcia014" class="card-link"> Github </a>
+                            </div>
+                        </div>
+                        <!--end card-->
                     </div>
                 </div>
-                <!--end card-->
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- card for Andrew (photo, brief description and email info -->
+                        <div class="card us">
+                            <img src="https://ca.slack-edge.com/T01C8L6GK9Q-U01CRGC3CRY-a3fbf16cbb1e-512" class="card-img-top" alt="andrew">
 
-
-
-                <!-- card for Andrew (photo, brief description and email info -->
-                <div class="card us">
-                    <img src="./images/drew.jpg" class="card-img-top" alt="andrew">
-
-                    <div class="card-body">
-                        <h3 class="card-title dev-title">Andrew Jefferson</h3>
-                        <p class="card-text">
-                            <!-- Brief info re Andrew goes here -->
-                            Brief Description
-                        </p>
-                    </div>
-                    <!-- Three favorite things Andrew likes to do -->
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            Fav thing 1
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 2
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 3
-                        </li>
-                    </ul>
-                    <!-- Andrew's email info -->
-                    <div class="card-body">
-                        <a href="mailto:ajefferson419@yahoo.com"> Email </a>
-                        <br>
-                        <a href="https://github.com/drewski419" class="card-link">Github</a>
+                            <div class="card-body">
+                                <h3 class="card-title dev-title">Andrew Jefferson</h3>
+                                <p class="card-text">
+                                    <!-- Brief info re Andrew goes here -->
+                                    My favorite thing to do is listen to classical music while meditating and working out </p>
+                                <a href="mailto:ajefferson419@yahoo.com"> Email </a>
+                                <br>
+                                <a href="https://github.com/drewski419" class="card-link">Github</a>
+                            </div>
+                        </div>
+                        <!--end card-->
                     </div>
                 </div>
-                <!--end card-->
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- card for Alex (photo, brief description and email info -->
+                        <div class="card us">
+                            <img src="https://ca.slack-edge.com/T01C8L6GK9Q-U01D5EVP37A-bd8846cf40ca-512" class="card-img-top" alt="alex">
 
+                            <div class="card-body">
+                                <h3 class="card-title dev-title">Alex Siegried</h3>
+                                <p class="card-text">
+                                    <!-- Brief info re Alex goes here -->
+                                    Since graduating from UCLA in 2017 I've worked biz dev for very early-stage Silicon Beach tech startups (specifically ad tech). It's been absurdly challenging (like being told to make the company worth $100MM in two years with literally a $0 customer-aquisition-cost
+                                    challenging) but significantly rewarding. Working closely (in execution and literal proximity) with several dev teams over the past few years has given me a decent idea of what the dev life of a tech startup worker
+                                    is like. I've learned a lot of their metanarratives, culural quirks, work pace as well as actual projects and realized that that fits my personality much better than the biz dev side. So I'm extremely excited to begin
+                                    down the coding trail towards our inevitable replacement by functional (sentient or not) AI. Also, my other full time job is as the frontman/writer/manager/social media intern for the progessive death metal band Deified.
 
-
-                <!-- card for Alex (photo, brief description and email info -->
-                <div class="card us">
-                    <img src="./images/alex.jpg" class="card-img-top" alt="alex">
-
-                    <div class="card-body">
-                        <h3 class="card-title dev-title">Alex Siegried</h3>
-                        <p class="card-text">
-                            <!-- Brief info re Alex goes here -->
-                            Brief Description
-                        </p>
-                    </div>
-                    <!-- Three favorite things Alex likes to do -->
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            Fav thing 1
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 2
-                        </li>
-                        <li class="list-group-item">
-                            Fav thing 3
-                        </li>
-                    </ul>
-                    <!-- Alex's email info -->
-                    <div class="card-body">
-                        <a href="mailto:-----"> Email </a>
-                        <br>
-                        <a href="https://github.com/awsiegfried" class="card-link">Github</a>
+                                </p>
+                                <a href="mailto:awsiegfried@gmail.com"> Email </a>
+                                <br>
+                                <a href="https://github.com/awsiegfried" class="card-link">Github</a>
+                            </div>
+                        </div>
+                        <!--end card-->
                     </div>
                 </div>
-                <!--end card-->
-
             </div>
         </div>
     </div>
