--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -34,7 +34,7 @@
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
-                    <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
+                    <li class="nav-item"><a href="/virtualgym" class="nav-link">Virtual Gym</a></li>
                     <li class="nav-item"><a href="/aboutus" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                 </ul>
@@ -46,7 +46,7 @@
 
     <div class="container ">
         <div class="card card col-sm-12">
-            <div class="card-body survey">
+            <div class="card-body survey mt-4">
                 <h5 class="card-header intro">What do you have around the house?</h5>
 
                 <!-- <strong>Which of the following do you have available to workout?</strong> -->
